adding more menu pages

--- a/menu.html
+++ b/menu.html
@@ -102,6 +102,8 @@
 
         <hr>
 
+        <!--This is where the links to other parts of menu will go-->
+
         <br>
         <br>
 
@@ -110,7 +112,9 @@
             <div class="col-8 karla" style="font-size: 45px; margin-bottom: 50px;">
                 Appetizers
             </div>
-            <div class="col-2"></div>
+            <div class="col-2">
+                <a href="menu_noodles.html"><i class="fa fa-arrow-circle-right fa-4x operaMauveText" aria-hidden="true"></i></a>
+            </div>
         </div>
 
         <div class="row">
@@ -313,7 +317,8 @@
                 <br> ** Vegetarian available** <br>
                 ***Spicy upon request – not hot (not for curry), mild, medium, hot, or Thai hot. <br>
                 18% gratuity will be added to parties of 6 or more or parties with split checks. <br>
-                Chef’s note: Because we prepare your spiciness upon your request, if you order HOT or THAI HOT and it’s too spicy, you will be responsible for your order and will pay extra for new item.
+                Chef’s note: Because we prepare your spiciness upon your request, <br>
+                if you order HOT or THAI HOT and it’s too spicy, you will be responsible for your order and will pay extra for new item.
             </div>
             <div class="col-2"></div>
         </div>
