prepping for design changes

--- a/menu.html
+++ b/menu.html
@@ -94,7 +94,7 @@
 
         <div class="row">
             <div class="col-2"></div>
-            <div class="col-8 tAlign karla" style="font-size: 75px;">
+            <div class="col-8 tAlign indieFlower" style="font-size: 75px;">
                 Menu
             </div>
             <div class="col-2"></div>
@@ -109,7 +109,7 @@
 
         <div class="row">
             <div class="col-2"></div>
-            <div class="col-8 karla" style="font-size: 45px; margin-bottom: 50px;">
+            <div class="col-8 karla" style="font-size: 50px; font-family:'Indie Flower';margin-bottom: 50px;">
                 Appetizers
             </div>
             <div class="col-2">
