added menu button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   </head>
 
-  <body id="home" class="operaMauveBG">
-    <div class="container-fluid p-0">
+  <body id="home">
+    <div class="container-fluid p-0 m-0">
 
         <div class="header position-relative">
 
@@ -39,7 +39,7 @@
         </div>
 
         <!-- start nav bar -->
-        <nav class="navbar height10 navbar-expand-lg bg-white cherryBlossomText sticky-top p-0" style="border:solid 2px black">
+        <nav class="navbar height10 navbar-expand-lg bg-white cherryBlossomText sticky-top p-0 m-0" style="border:solid 2px black">
 
             <!--Logo-->
             <a class="navbar-brand ml-4" href="http://www.thaigourmethouston.com" target="_blank">
@@ -89,21 +89,30 @@
             </div>
         </nav>
 
-        <div class="row operaMauveBG mt-5">
-            <div class="col-2"></div>
-            <div class="col-8 d-flex justify-content-center p-4 bg-white karla blackborder" style="font-size: 20px;">
-                <b>Welcome to the house of typical Thai cuisine...
+        <div class="row">
+            <div class="col-6 p-0 N5ML">
+                <img class= "wParent" src="images/thailand1.jpg" alt="thailand beautiful">
+            </div>
+            <div class="col-6 d-flex flex-column p-4 justify-content-around teaGreenBG bdazzledBlueText karla P5MR" style="font-size: 18px;">
+                <h2><b> Welcome to the home for Thai cuisine</b></h2>
 
-                Thai people love to greet guests with the best food and hospitality.
+                <div>
+                    Thai people love to greet guests with the best food and hospitality.
 
                 Thai food is one of the world’s greatest cuisines. It is never bland due to the spices, herbs, and seasonings. Although, Thais prefer hot and spicy food but not all dishes are fiery. Many Thai dishes have influences from India, China, and Java; but the final art of the Thai cooking comes from the skills and sophistications of the chefs.
 
-                We, at the Thai Gourmet, will serve you the best to keep the tradition alive.</b>
+                We, at the Thai Gourmet, will serve you the best to keep the tradition alive.
+                </div>
+
+                <!-- <button type="button" class="btn btn-primary border-0">
+                   <a class="teaGreenText" href="menu.html" width="100%">View Our Menu</a>
+                </button> -->
+                <a class="btn btn-primary border-0" href="menu.html" role="button">View Our Menu</a>
+                
             </div>
-            <div class="col-2"></div>
         </div>
 
-        <div class="row operaMauveBG">
+        <div class="row">
             <div class="col-1"></div>
             <div class="col-10 d-flex justify-content-center p-5 karla" style="font-size: 70px;">
                <div id="aboutus">About Us</div>
@@ -111,7 +120,7 @@
             <div class="col-1"></div>
         </div>
 
-        <div class="row operaMauveBG">
+        <div class="row">
             <div class="col-1"></div>
             <div class="col-10 bg-white d-flex p-5 blackborder">
                 <div class="col-5 mt-4 p-5 main borderRadius2">
@@ -132,7 +141,7 @@
             <div class="col-1"></div>
         </div>
 
-        <div class="row operaMauveBG">
+        <div class="row">
             <div class="col-1"></div>
             <div class="col-10 d-flex justify-content-center p-5 karla" style="font-size: 70px;">
                 <div id="info">Information</div>
@@ -141,7 +150,7 @@
         </div>
 
 
-        <div class="row operaMauveBG">
+        <div class="row">
             <div class="col-1"></div>
             <div class="col-10 cherryBlossomBG d-flex p-5 bg-white blackborder">
                 <div class="col-5 mt-4 p-5 main align-items-center justify-content-center">
