cleaning up colors on menu

--- a/menu.html
+++ b/menu.html
@@ -17,8 +17,7 @@
 
 <body class="operaMauveBG">
 
-    <!-- <img class="bgimage z0" src="images/bgimage.jpeg" alt="thailand beautiful"> -->
-    <nav class="navbar height10 navbar-expand-lg bg-white cherryBlossomText sticky-top p-0" style="border:solid 2px black; border-top: none;">
+    <nav class="navbar height10 navbar-expand-lg bg-white cherryBlossomText sticky-top p-0">
 
         <!--Logo-->
         <a class="navbar-brand ml-4" href="http://www.thaigourmethouston.com" target="_blank">
@@ -69,13 +68,13 @@
         </div>
     </nav>
 
-    <div class="container  bg-white mt-5 blackborder">
+    <div class="container bg-white mt-5 blackborder">
 
         <div class="row pt-5 pb-5">
             <div class="col-2"></div>
-            <div class="col-8 blackborder" style="background-color: #BBBBBF">
+            <div class="col-8 blackborder" style="background-color: #F1E3E4">
                 <p>
-                    Due to unforeseen circumstances, following items are currently NOT available until further notice.
+                    Due to unforeseen circumstances, the following items are currently NOT available until further notice.
                     <br>
                     • Appetizers: A-3, A-5, A-8, and A-10
                     <br>
