--- a/menu_noodles.html
+++ b/menu_noodles.html
@@ -16,7 +16,7 @@
   </head>
   <body class="operaMauveBG">
 
-    <nav class="navbar height10 navbar-expand-lg bg-white cherryBlossomText sticky-top p-0" style="border:solid 2px black; border-top: none;">
+    <nav class="navbar height10 navbar-expand-lg bg-white cherryBlossomText sticky-top p-0">
             <!--Logo-->
             <a class="navbar-brand ml-4" href="http://www.thaigourmethouston.com" target="_blank">
                 <img src="images/tglogo.png" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|} height8" alt="">
@@ -70,9 +70,9 @@
     
             <div class="row pt-5">
                 <div class="col-2"></div>
-                <div class="col-8 blackborder" style="background-color: #BBBBBF">
+                <div class="col-8 blackborder" style="background-color: #F1E3E4">
                     <p>
-                        Due to unforeseen circumstances, following items are currently NOT available until further notice.
+                        Due to unforeseen circumstances, the following items are currently NOT available until further notice.
                         <br>
                         • Appetizers: A-3, A-5, A-8, and A-10
                         <br>
