added hover effect for arrows

--- a/menu.html
+++ b/menu.html
@@ -137,7 +137,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row">
+                <div class="row whitesmoke">
                     <div class="col-2  d-flex justify-content-center">
                         ** A-2
                     </div>
@@ -176,7 +176,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row">
+                <div class="row whitesmoke">
                     <div class="col-2 d-flex justify-content-center">
                         A-4
                     </div>
@@ -212,7 +212,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row">
+                <div class="row whitesmoke">
                     <div class="col-2  d-flex justify-content-center">
                         ** A-6
                     </div>
@@ -250,7 +250,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row">
+                <div class="row whitesmoke">
                     <div class="col-2  d-flex justify-content-center">
                         ** A-8
                     </div>
@@ -289,7 +289,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-                <div class="row">
+                <div class="row whitesmoke">
                     <div class="col-2  d-flex justify-content-center">
                         A-10
                     </div>
@@ -309,9 +309,9 @@
 
         <hr>
 
-        <div class="row mt-5" style="font-size: 12px;">
+        <div class="row mt-0" style="font-size: 12px;">
             <div class="col-2"></div>
-            <div class="col-8 p-4 ml-4">
+            <div class="col-8 p-2 ml-4">
                 Each entree is served with steamed rice per person per order. <br> Additional rice with no entree will be charged $2.95 per person
                 <br> ** Vegetarian available** <br>
                 ***Spicy upon request – not hot (not for curry), mild, medium, hot, or Thai hot. <br>
