added fried rice page

--- a/menu_rice.html
+++ b/menu_rice.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Thai Gourmet - Noodles</title>
+    <title>Thai Gourmet - Rice Dishes</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -107,13 +107,11 @@
                     <a href="menu.html"><i class="fa fa-arrow-circle-left fa-4x bdazzledBlueText" aria-hidden="true"></i></a>
                 </div>
                 <div class="col-8 d-flex flex-column align-items-center karla" style="font-size: 50px; font-family:'Indie Flower';margin-bottom: 50px;">
-                    Noodles
+                    Fried Rice
                     <br>
                     <div style="font-size: 18px; font-family: karla;">
-                        With your choice of chicken or pork; with beef or shrimp add $1. <br>
-                        Meat combination or extra meat add $3; extra shrimp add $5.95
+                        Extra meat or meat combination add $3; Shrimp add $5.95
                     </div>
-
                 </div>
                 <div class="col-2">
                     <a href="menu_rice.html"><i class="fa fa-arrow-circle-right fa-4x bdazzledBlueText" aria-hidden="true"></i></a>
