lots of data entry to do for menu lists

--- a/menu.html
+++ b/menu.html
@@ -112,7 +112,7 @@
                 Appetizers
             </div>
             <div class="col-2">
-                <a href="menu_noodles.html"><i class="fa fa-arrow-circle-right fa-4x operaMauveText" aria-hidden="true"></i></a>
+                <a href="menu_noodles.html"><i class="fa fa-arrow-circle-right fa-4x bdazzledBlueText" aria-hidden="true"></i></a>
             </div>
         </div>
 
@@ -124,7 +124,8 @@
                         ** A-1
                     </div>
                     <div class="col-8 d-flex justify-content-start">
-                        <b>Spicy Cheese Rolls</b>  - Deep Fried
+                        <b>Spicy Cheese Rolls</b> - Deep Fried
+
                     </div>
                     <div class="col-2 d-flex justify-content-end">
                         5.95
@@ -142,7 +143,8 @@
                         ** A-2
                     </div>
                     <div class="col-8 d-flex justify-content-start">
-                        <b>Spring Rolls</b>  - Deep Fried(vegetarian)
+                        <b>Spring Rolls</b> - Deep Fried (no meat)
+                       
                     </div>
                     <div class="col-2 d-flex justify-content-end">
                         4.95
