--- a/menu_rice.html
+++ b/menu_rice.html
@@ -104,7 +104,7 @@
     
             <div class="row">
                 <div class="col-2 d-flex justify-content-end">
-                    <a href="menu.html"><i class="fa fa-arrow-circle-left fa-4x bdazzledBlueText" aria-hidden="true"></i></a>
+                    <a href="menu_noodles.html"><i class="fa fa-arrow-circle-left fa-4x bdazzledBlueText" aria-hidden="true"></i></a>
                 </div>
                 <div class="col-8 d-flex flex-column align-items-center karla" style="font-size: 50px; font-family:'Indie Flower';margin-bottom: 50px;">
                     Fried Rice
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="col-2">
-                    <a href="menu_rice.html"><i class="fa fa-arrow-circle-right fa-4x bdazzledBlueText" aria-hidden="true"></i></a>
+                    <a href="index.html"><i class="fa fa-arrow-circle-right fa-4x bdazzledBlueText" aria-hidden="true"></i></a>
                 </div>
             </div>
     
@@ -123,15 +123,15 @@
                 <div class="col-8">
                     <div class="row pt-3">
                         <div class="col-2  d-flex justify-content-center">
-                            ** N-1
+                            ** R-1
                         </div>
                         <div class="col-8">
-                            <b>Pad Thai</b>
+                            <b>Pineapple Fried Rice</b>
                             <br>
-                            Rice stick noodles stir fried w/egg, tofu, bean sprouts, red & green onions
+                            W/chicken, beef, pork, shrimp, raisins, cashew nuts, red & green onions
                         </div>
                         <div class="col-2 d-flex justify-content-end">
-                            12.50
+                            12.95
                         </div>
                     </div>
                 </div>
