to be continued some other time

--- a/menu_rice.html
+++ b/menu_rice.html
@@ -143,14 +143,96 @@
                 <div class="col-8">
                     <div class="row whitesmoke">
                         <div class="col-2  d-flex justify-content-center">
-                            ** N-2
+                            ** R-2
                         </div>
                         <div class="col-8">
-                            <b>Noodles with Broccoli</b> (Pad See Ew) <br>
-                            W/broccoli or gai lan (Chinese broccoli) stir fried w/flat fresh rice noodles
+                            <b>Thai Fried Rice</b>
+                            <br>
+                            W/ tomatoes, egg, red & green onions
                         </div>
                         <div class="col-2 d-flex justify-content-end">
-                            11.50
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-8">
+                    <div class="row whitesmoke">
+                        <div class="col-2  d-flex justify-content-center">
+                            
+                        </div>
+                        <div class="col-8">
+                            No Meat
+                        </div>
+                        <div class="col-2 d-flex justify-content-end">
+                            8.95
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-8">
+                    <div class="row whitesmoke">
+                        <div class="col-2  d-flex justify-content-center">
+                        </div>
+                        <div class="col-8">
+                            Chicken or Pork
+                        </div>
+                        <div class="col-2 d-flex justify-content-end">
+                            12.50
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-8">
+                    <div class="row whitesmoke">
+                        <div class="col-2  d-flex justify-content-center">
+                        </div>
+                        <div class="col-8">
+                            Beef or Shrimp
+                        </div>
+                        <div class="col-2 d-flex justify-content-end">
+                            12.95
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-8">
+                    <div class="row whitesmoke">
+                        <div class="col-2  d-flex justify-content-center">
+                        </div>
+                        <div class="col-8">
+                            Crab
+                        </div>
+                        <div class="col-2 d-flex justify-content-end">
+                            14.95
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-8">
+                    <div class="row whitesmoke">
+                        <div class="col-2  d-flex justify-content-center">
+                        </div>
+                        <div class="col-8">
+                            Shrimp & Crab
+                        </div>
+                        <div class="col-2 d-flex justify-content-end">
+                            18.50
                         </div>
                     </div>
                 </div>
@@ -162,16 +244,16 @@
                 <div class="col-8">
                     <div class="row">
                         <div class="col-2  d-flex justify-content-center">
-                            ** N-3
+                            R-3
                         </div>
                         <div class="col-8">
-                            <b>Noodles with Gravy</b> (Raad Naa)
+                            <b>Crab Fried Rice</b>
                             <br>
-                            Dark sauce w/choice of broccoli or gai lan (Chinese broccoli) served over pan fried flat fresh rice noodles
+                            W/ egg & green onions
                         </div>
     
                         <div class="col-2 d-flex justify-content-end">
-                            11.50
+                            14.95
                         </div>
                     </div>
                 </div>
